--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,19 @@ services:
       context: ./server
       dockerfile: Dockerfile
     container_name: wisdom-server
+    working_dir: /app
     ports:
       - "1337:1337"
     command: ["-address=:1337", "-wisdoms=wisdoms.json"]
-    working_dir: /app
+    restart: unless-stopped
 
   client:
     build:
       context: ./client
       dockerfile: Dockerfile
     container_name: wisdom-client
+    working_dir: /app
     depends_on:
       - server
     command: ["-address=server:1337", "-count=3"]
-    working_dir: /app
+    restart: unless-stopped
