[docker] client build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
     ports:
       - "1337:1337"
     command: ["-address=:1337", "-wisdoms=wisdoms.json"]
+    restart: unless-stopped
+
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    container_name: wisdom-client
+    working_dir: /app
+    depends_on:
+      - server
+    command: ["-address=server:1337", "-count=5"]
+    restart: unless-stopped
